# screen-tracker

./: .gitignore
.github/workflows/: build.yml
setup/: SETUP.md  config-template.json  dashboard.gs  proxy.gs
src/: index.html  password.html  setup.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  drive.rs  email.rs  main.rs  storage.rs  tracker.rs
